--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ p a:hover {
 	margin: 0 auto;
 	max-width: 960px;
 }
+
+#abtPara {
+	text-align: center;
+	margin-left: 20%;
+}
+
 #header h1 {
 	font-size: 50px;
 	font-weight: normal;
@@ -377,7 +383,6 @@ p a:hover {
 }
 #footer div#connect {
 	float: right;
-	overflow: hidden;
 	width: auto;
 }
 #footer div#connect a {
