--- a/css/mobile.css
+++ b/css/mobile.css
@@ -120,35 +120,42 @@
 		padding: 74px 0 0;
 	}
 	#body {
-		margin: 20px auto 0;
-		padding: 45px 0 46px;
-		width: 90%;
+		float: none;
+		margin: 0 auto;
+		width: 70%;
 	}
 	#body div#tagline {
 		float: none;
-		margin: 20px auto 0;
-		width: 90%;
+		margin: 0 auto;
+		width: 70%;
 	}
 	#body div#tagline h1 {
-		background-size: 37% auto;
-		line-height: 1em;
-		padding: 0 0 50px;
+		float: none;
+		margin: 0 auto;
+		width: 70%;
 	}
 	#body div#tagline p {
-		font-size: 5em;
-		line-height: 1.25em;
-		padding: 43px 10px;
+		float: none;
+		margin: 0 auto;
+		width: 70%;
 	}
+	
 	#body img.figure {
 		float: none;
 		margin: 0 auto;
 		width: 70%;
 	}
 	#body > h2 {
-		padding: 0 20px 30px;
+		/*padding: 0 20px 30px;*/
+		float: none;
+		margin: 0 auto;
+		width: 70%;
 	}
 	#body div.content {
-		padding: 0 20px;
+		/*padding: 0 20px;*/
+		float: none;
+		margin: 0 auto;
+		width: 70%;
 	}
 	#body div.content div,
 	#footer div {
@@ -185,6 +192,12 @@
 		-webkit-appearance: none;
 		width: 93%;
 	}
+
+	img {
+		width: 93%;
+		height: auto;
+	}
+
 	#body form input#send {
 		margin: 8px 2px 0 0;
 		padding: 0;
@@ -253,4 +266,6 @@ and (max-width : 320px) {
 	#footer div p {
 		font-size: 1em;
 	}
+	
 }
+
